--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@ footer { margin-top: 30px; font-size: 12px; opacity: 0.5; text-align: center; }
 </div>
 </div>
 
-<footer>© 2025 NotumKac.com | Berkay Gürçay</footer>
-
+<div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px; font-size: 13px; font-weight: 600;">
+<a href="index.html" style="color: var(--text); text-decoration: none; opacity: 0.6;">Ana Sayfa</a>
+<a href="gizlilik.html" style="color: var(--text); text-decoration: none; opacity: 0.6;">Gizlilik Politikası</a>
+</div>
 <script>
 function limit(i) { if(i.value > 100) i.value = 100; if(i.value < 0) i.value = 0; }
 function toggleTheme() {
