--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HL9ZP2TTKX"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HL9ZP2TTKX');
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-HL9ZP2TTKX');
 </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Notum Kaç? | Hesaplayıcı</title>
+<title>Notum Kaç? | Gurcay Tech</title>
 <style>
 :root {
 --bg: #f8fafc; --card-bg: #ffffff; --text: #1e293b;
@@ -25,7 +23,7 @@
 body {
 background-color: var(--bg); color: var(--text); font-family: 'Inter', sans-serif;
 transition: all 0.3s ease; display: flex; flex-direction: column;
-justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px;
+align-items: center; min-height: 100vh; margin: 0; padding: 40px 20px;
 }
 .container {
 background: var(--card-bg); padding: 30px; border-radius: 24px;
@@ -36,6 +34,7 @@ border: 1px solid var(--border); position: relative;
 position: absolute; top: 25px; right: 25px; cursor: pointer;
 font-size: 22px; background: none; border: none; color: var(--text);
 }
+/* Başlık Emojisi Değişti */
 h2 { text-align: center; margin-bottom: 30px; font-weight: 800; background: linear-gradient(to right, #6366f1, #a855f7); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 .input-group { margin-bottom: 20px; }
 label { display: block; font-size: 13px; margin-bottom: 8px; font-weight: 600; text-transform: uppercase; opacity: 0.7; }
@@ -69,14 +68,14 @@ display: inline-flex; align-items: center; justify-content: center;
 margin-top: 15px; color: #25d366; text-decoration: none;
 font-weight: 700; font-size: 14px; gap: 8px;
 }
-footer { margin-top: 30px; font-size: 12px; opacity: 0.5; text-align: center; }
 </style>
 </head>
 <body data-theme="dark">
 
 <div class="container">
 <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
-<h2>🎯 Notum Kaç?</h2>
+
+<h2>💯 Notum Kaç?</h2>
 
 <div class="input-group">
 <label>Vize Sınavı (Zorunlu)</label>
@@ -102,17 +101,39 @@ footer { margin-top: 30px; font-size: 12px; opacity: 0.5; text-align: center; }
 <div id="resScore" style="font-size: 42px; font-weight: 900; color: var(--primary);"></div>
 <a id="waLink" class="share-wa" target="_blank" href="#">📲 Sonucu Paylaş</a>
 </div>
+
+<div style="margin-top: 40px; font-size: 11px; opacity: 0.3; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 15px;">
+© 2025 Gurcay Tech | Tüm Hakları Saklıdır.
+</div>
 </div>
 
-<div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px; font-size: 13px; font-weight: 600;">
-<a href="index.html" style="color: var(--text); text-decoration: none; opacity: 0.6;">Ana Sayfa</a>
-<a href="gizlilik.html" style="color: var(--text); text-decoration: none; opacity: 0.6;">Gizlilik Politikası</a>
+<footer style="margin-top: 60px; border-top: 1px solid var(--border); padding: 40px 20px; text-align: center; width: 100%; max-width: 600px;">
+
+<div style="display: flex; align-items: center; justify-content: center; gap: 12px; margin-bottom: 25px;">
+<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--primary);"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
+<div style="font-weight: 900; font-size: 24px; background: linear-gradient(to right, var(--primary), #a855f7); -webkit-background-clip: text; -webkit-text-fill-color: transparent; letter-spacing: 1px;">GURCAY TECH</div>
 </div>
+
+<div style="font-size: 14px; max-width: 500px; margin: 0 auto 40px; opacity: 0.7; line-height: 1.6;">
+<b>Hakkımızda:</b> NotumKac.com, Gurcay Tech çatısı altında geliştirilen bir akademik yardımcı araçtır. Misyonumuz, öğrencilerin stresli sınav dönemlerini daha kolay yönetmelerini sağlamaktır. Verileriniz tamamen cihazınızda işlenir, asla sunucularımıza kaydedilmez.
+</div>
+
+<div style="margin-bottom: 25px; font-size: 13px; font-weight: 600;">
+<a href="gizlilik.html" style="color: var(--text); text-decoration: none; opacity: 0.5;">Gizlilik Politikası</a>
+</div>
+
+<div style="font-size: 12px; opacity: 0.4;">
+Designed by Berkay Gurcay
+</div>
+</footer>
+
 <script>
 function limit(i) { if(i.value > 100) i.value = 100; if(i.value < 0) i.value = 0; }
+
 function toggleTheme() {
 const body = document.body;
-body.setAttribute('data-theme', body.getAttribute('data-theme') === 'light' ? 'dark' : 'light');
+const current = body.getAttribute('data-theme');
+body.setAttribute('data-theme', current === 'light' ? 'dark' : 'light');
 }
 
 function addNoteRow() {
@@ -149,9 +170,8 @@ const resBox = document.getElementById('resultBox');
 resBox.style.display = 'block';
 
 const finalResult = needed < 0 ? 0 : needed.toFixed(1);
-document.getElementById('resScore').innerText = finalResult;
+document.getElementById('resScore').innerText = finalResult > 100 ? "Bu dersi geçmen matematiksel olarak imkansız" : finalResult;
 
-// WhatsApp Share
 const shareText = `NotumKac.com ile hesapladım! Bu dersi geçmem için finalden ${finalResult} almam gerekiyormuş.`;
 document.getElementById('waLink').href = "https://wa.me/?text=" + encodeURIComponent(shareText);
 }
