--- a/gizlilik.html
+++ b/gizlilik.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gizlilik Politikası | Gürçay Tech</title>
+<title>Gizlilik Politikası | Gurcay Tech</title>
 <style>
 :root { --bg: #0f172a; --card-bg: #1e293b; --text: #f8fafc; --primary: #818cf8; --border: #334155; }
 body { background-color: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; line-height: 1.6; padding: 40px 20px; display: flex; justify-content: center; }
@@ -20,7 +20,7 @@ p { opacity: 0.9; }
 <h1>Gizlilik Politikası</h1>
 <p>Son Güncelleme: 24 Aralık 2025</p>
 
-<p><strong>Gürçay Tech</strong> çatısı altında faaliyet gösteren <strong>NotumKac.com</strong> olarak gizliliğinize önem veriyoruz. Bu politika, sitemizi ziyaret ettiğinizde hangi verilerin nasıl işlendiğini açıklar.</p>
+<p><strong>Gurcay Tech</strong> çatısı altında faaliyet gösteren <strong>NotumKac.com</strong> olarak gizliliğinize önem veriyoruz. Bu politika, sitemizi ziyaret ettiğinizde hangi verilerin nasıl işlendiğini açıklar.</p>
 
 <h2>1. Veri Toplama</h2>
 <p>NotumKac.com, kullanıcıların girdiği not verilerini (Vize, Final vb.) hiçbir sunucuya kaydetmez. Tüm hesaplamalar tarayıcınızda (istemci tarafında) yapılır. Kişisel verileriniz bizimle paylaşılmaz.</p>
@@ -32,10 +32,10 @@ p { opacity: 0.9; }
 <p>Sitemizde ilerleyen dönemlerde <strong>Google AdSense</strong> reklamları yayınlanabilir. Google, ilgi alanlarınıza dayalı reklamlar sunmak için çerezleri kullanabilir. Kullanıcılar, Google reklam ayarlarını ziyaret ederek kişiselleştirilmiş reklamcılığı devre dışı bırakabilirler.</p>
 
 <h2>4. İletişim</h2>
-<p>Gizlilik politikamız hakkında sorularınız için kurucumuz <strong>Berkay Gürçay</strong> ile iletişime geçebilirsiniz.</p>
+<p>Sitemiz hakkında sorularınız için <strong>gurcaytech@gmail.com</strong> ile mail yoluyla iletişime geçebilirsiniz.</p>
 
 <footer style="margin-top: 40px; font-size: 12px; opacity: 0.5; text-align: center;">
-© 2025 Gürçay Tech | Tüm Hakları Saklıdır.
+© 2025 Gurcay Tech | Tüm Hakları Saklıdır.
 </footer>
 </div>
 </body>
