--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HL9ZP2TTKX"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
@@ -178,3 +179,4 @@ document.getElementById('waLink').href = "https://wa.me/?text=" + encodeURICompo
 </script>
 </body>
 </html>
+
