--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ gtag('config', 'G-HL9ZP2TTKX');
 </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Notum Kaç? | Final Not Hesaplama Motoru</title>
+<title>Notum Kaç? | Final Not Hesaplayıcı</title>
 <style>
 :root {
 --bg: #f8fafc; --card-bg: #ffffff; --text: #1e293b;
