--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@ font-weight: 700; font-size: 14px; gap: 8px;
 <div class="container">
 <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
 
-<h2>💯 Notum Kaç?</h2>
+<h2>Notum Kaç?</h2>
+
+<div style="text-align: center; font-size: 15px; margin-bottom: 30px; opacity: 0.6; font-weight: 500; letter-spacing: 0.5px;">
+    Final Notu Hesaplayıcı
+</div>
 
 <div class="input-group">
 <label>Vize Sınavı (Zorunlu)</label>
